--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.15",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
+    "notion-to-md": "^3.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
